--- a/client/templates/groups/group.html
+++ b/client/templates/groups/group.html
@@ -2,6 +2,13 @@
 <p class="breadcrumbs"><a href="{{pathFor 'groups'}}">Groups</a> > {{group.name}}</p>
 	<h3><i class="mdi-social-group left"></i>{{group.name}}</h3>
 	<div class="card-panel">
+		<h4>
+			<i class="mdi-action-assignment left"></i>Tasks
+		</h4>
+		{{> tasksByTag}}
+		{{> newGroupTagButton}}
+	</div>
+	<div class="card-panel">
 		<h4><i class="mdi-social-person left"></i>Members</h4>
 		<ul class="row collection">
 			{{#each groupMember}}
@@ -9,11 +16,5 @@
 			{{/each}}
 		</ul>
 	</div>
-	<div class="card-panel">
-		<h4>
-			<i class="mdi-action-assignment left"></i>Tasks
-		</h4>
-		{{> tasksByTag}}
-	</div>
-	{{> newTagOrTaskButton}}
+	{{> newGroupTaskButton}}
 </template>
