--- a/client/templates/solo/solo.html
+++ b/client/templates/solo/solo.html
@@ -2,12 +2,14 @@
 	<div class="card-panel">
 		<h4>
 			<i class="mdi-action-assignment left"></i>Your Tasks
+
 		</h4>
 		{{> tasksByTag}}
+		{{> newGroupTagButton}}
 	</div>
 	<div class="card-panel">
 		<h4><i class="mdi-social-person left"></i>Your Profile</h4>
 		{{> nicknameForm}}
 	</div>
-	{{> newTagOrTaskButton}}
+	{{> newGroupTaskButton}}
 </template>
