agendaWeek view, get duration field of completions

--- a/client/templates/tasks/calendar.html
+++ b/client/templates/tasks/calendar.html
@@ -22,7 +22,7 @@
 		<div class="input-field col s12 m6 l4  offset-m3 offset-l4">
 			<select id="calendar-view-select" name="calendarView">
 				<option value="month" {{calendarView 'month'}}>Month</option>
-				<option value="basicWeek" {{calendarView 'basicWeek'}}>Week</option>
+				<option value="basicWeek" {{calendarView 'agendaWeek'}}>Week</option>
 				<option value="agendaDay" {{calendarView 'agendaDay'}}>Day</option>
 			</select>
 			<label>View:</label>
