--- a/client/templates/index/notifications.html
+++ b/client/templates/index/notifications.html
@@ -24,7 +24,7 @@
 		{{/if}}
 		{{#each notifications}}
 
-		<div class="card-panel">
+		<div class="card-panel row">
 
 			<h5><a href="/groups/{{id}}"><strong><i class="mdi-social-group"></i>{{name}}</strong></a>:</h5>
 
