--- a/client/templates/tasks/calendar.html
+++ b/client/templates/tasks/calendar.html
@@ -3,7 +3,10 @@
 	<div id="index-calendar">
 	{{> calendarArrows}}
 	{{> ReactiveFullcalendar options=calendarOptions}}
+	<div class="row">
 	{{> calendarViewControl}}
+	{{> calendarViewTypeControl}}
+	</div>
 	</div>
 </div>
 </template>
@@ -18,20 +21,22 @@
 </template>
 
 <template name="calendarViewControl">
-	<div class="row">
-		<div class="input-field col s6 m3  offset-m3">
-			<select id="calendar-view-select" name="calendarView">
-				<option value="month" {{calendarView 'month'}}>Month</option>
-				<option value="agendaWeek" {{calendarView 'agendaWeek'}}>Week</option>
-				<option value="agendaDay" {{calendarView 'agendaDay'}}>Day</option>
-			</select>
-			<label>View:</label>
-		</div>
-		<div class="col s6 m3">
-			<p><input type="checkbox" id="viewCompletedTasks" class="viewCheckbox" data-view="completed" {{calendarViewTasksChecked 'completed'}}>
-				<label for="viewCompletedTasks">Completed Tasks</label></p>
-			<p><input type="checkbox" id="viewDueTasks"  class="viewCheckbox" data-view="due" {{calendarViewTasksChecked 'due'}}>
-				<label for="viewDueTasks">Due Tasks</label></p>
-		</div>
+
+	<div class="input-field col s6 m3  offset-m3">
+		<select id="calendar-view-select" name="calendarView">
+			<option value="month" {{calendarView 'month'}}>Month</option>
+			<option value="agendaWeek" {{calendarView 'agendaWeek'}}>Week</option>
+			<option value="agendaDay" {{calendarView 'agendaDay'}}>Day</option>
+		</select>
+		<label>View:</label>
+	</div>
+</template>
+
+<template name="calendarViewTypeControl">
+	<div class="col s6 m3">
+		<p><input type="checkbox" id="viewCompletedTasks" class="viewCheckbox" data-view="completed" {{calendarViewTasksChecked 'completed'}}>
+			<label for="viewCompletedTasks">Completed Tasks</label></p>
+		<p><input type="checkbox" id="viewDueTasks"  class="viewCheckbox" data-view="due" {{calendarViewTasksChecked 'due'}}>
+			<label for="viewDueTasks">Due Tasks</label></p>
 	</div>
 </template>
