complete task modal fixed footer && layout fix

--- a/client/templates/modals/completeTaskModal.html
+++ b/client/templates/modals/completeTaskModal.html
@@ -1,10 +1,9 @@
 <template name="completeTaskModalBody">
-	<div class="row centered">
-		<h4>{{name}}</h4>
-	</div>
-
 	<div class="row">
-		<div class="input-field col s12 m4 offset-m4">
+		<div class="col s6 m4 l3 centered">
+		<h4>{{name}}</h4>
+		</div>
+		<div class="input-field col s6 m8 l9">
 			<input id="duration" name="taskDuration" type="number" value="{{duration}}">
 			<label for="duration" class="active">Duration (mins)</label>
 		</div>
