--- a/client/templates/solo/solo.html
+++ b/client/templates/solo/solo.html
@@ -16,7 +16,7 @@
 		<h4><i class="mdi-social-person left"></i>Your Profile</h4>
 		{{> nicknameForm}}
 	</div>
-	{{#if isDesktop}}
+	{{#if calendarViewAvailable}}
 	<div class="card-panel">
 		<h4><i class="mdi-notification-event-note left"></i>Completed</h4>		
 		<div id="group-calendar">
