--- a/client/templates/modals/completeTaskModal.html
+++ b/client/templates/modals/completeTaskModal.html
@@ -1,9 +1,13 @@
 <template name="completeTaskModalBody">
-	<div class="row">
-		<div class="col s6 m4 l3 centered">
+	<div class="row centered">
 		<h4>{{name}}</h4>
+	</div>
+	<div class="row">
+		<div class="col s6 m8 l9">
+			<p class="centered"><i class="mdi-social-group"></i>{{groupById}} <i class="mdi-action-label-outline"></i>{{tagById}}</p>
+			<p>{{description}}</p>
 		</div>
-		<div class="input-field col s6 m8 l9">
+		<div class="input-field col s6 m4 l3">
 			<input id="duration" name="taskDuration" type="number" value="{{duration}}">
 			<label for="duration" class="active">Duration (mins)</label>
 		</div>
