generalized form for task new/edit

--- a/client/templates/tags/list/template.html
+++ b/client/templates/tags/list/template.html
@@ -3,7 +3,7 @@
   <div id="tag-nav">
     <ul class="nav">
       {{#each tag in tagArray}}
-      {{> displayTag tag=tag admin=isAdmin editing=(editingTag tag) edit=setEditTag}}
+      {{> displayTag tag=tag admin=isAdmin editing=(editingTag tag) setEdit=setEditTag}}
       {{/each}}
     </ul>
   </div>
