--- a/client/templates/tags/new/template.html
+++ b/client/templates/tags/new/template.html
@@ -1,7 +1,7 @@
 <template name="newTag">
   <div class="row">
     <div class="col-xs-12">
-  <form id="new-tag-form" class="form-inline">
+  <form id="new-tag-form">
     <div class="form-group">
       <div class="input-group">
         <input type="text" class="form-control" id="new-tag-name" autocomplete="off">
