--- a/client/templates/tags/display/template.html
+++ b/client/templates/tags/display/template.html
@@ -1,28 +1,14 @@
 <template name="displayTag">
-  <li id="{{tag._id}}">
-
+  <a href="#panel-{{tag._id}}" class="list-group-item {{disabled tag}}">
+    <div class="row">
     {{#if editing}}
-    <form class="edit-tag-form">
-      <div class="col-xs-9 col-sm-7">
-        <input id="input-{{tag._id}}" class="edit-tag-name form-control" type="text" value="{{tag.name}}">
-        </div>
-      <div class="col-xs-3 col-sm-5 text-center">
-        <div class="btn-group">
-          <button type="submit" class="submit-edit-tag btn btn-xs btn-default">{{> glyphicon icon='ok'}}</button>
-          <button class="cancel-edit-tag btn btn-xs btn-default">{{> glyphicon icon='remove'}}</button>
-        </div>
-      </div>
-    </form>
+    {{> editTag editData}}
     {{else}}
-    <div class="col-xs-9 col-sm-7">
-    {{tag.name}}
-    {{#if numTasks tag}}
-    (<a href="#panel-{{tag._id}}">{{numTasks tag}}</a>)
-    {{/if}}
+    <div class="col-xs-8 col-sm-7">
+      {{tag.name}}
     </div>
-
     {{#if editable tag}}
-    <div class="col-xs-3 col-sm-5 text-center">
+    <div class="col-xs-4 col-sm-5 text-center">
       <div class="btn-group">
         <button class="edit-tag btn btn-xs btn-default">{{> glyphicon icon='pencil'}}</button>
         <button class="delete-tag btn btn-xs btn-default">{{> glyphicon icon='trash'}}</button>
@@ -31,6 +17,6 @@
     {{/if}}
 
     {{/if}}
-
-  </li>
-  </template>
+    </div>
+  </a>
+</template>
